# 662

./: README.md  main.py  pyproject.toml  requirement.txt
code/: 00_convert_wide_to_long.py  00_worldbank_to_wide.py  01_data.py  02_ch4_trend.py
data/processed/: methane_clean.csv
data/raw/: ceic_gdp_pop_multi.csv  ceic_gdp_wide.csv  ceic_pop_wide.csv  edgar_ch4_multi.csv  edgar_ch4_wide.csv
